syntax = "proto3";

package smartcity.devices;

// Enumerações
enum DeviceType {
  UNKNOWN_DEVICE = 0;
  TEMPERATURE_SENSOR = 5;
}

enum DeviceStatus {
  UNKNOWN_STATUS = 0;
  ACTIVE = 4;
}

// Mensagem para dados de temperatura e umidade
message TemperatureHumidityData {
  double temperature = 1;
  double humidity = 2;
}

// Mensagem para atualizações de dispositivo
message DeviceUpdate {
  string device_id = 1;
  DeviceType type = 2;
  DeviceStatus current_status = 3;
  TemperatureHumidityData temperature_humidity = 4;
}

// Mensagem para informações do dispositivo
message DeviceInfo {
  string device_id = 1;
  DeviceType type = 2;
  string ip_address = 3;
  int32 port = 4;
  DeviceStatus initial_state = 5;
  bool is_actuator = 6;
  bool is_sensor = 7;
} 